fix overflow issue with focus jumbotron

--- a/app/assets/stylesheets/focus.css
+++ b/app/assets/stylesheets/focus.css
@@ -10,6 +10,7 @@
 	justify-content: space-around;
 	width: 100%;
 	height: 650px;
+	overflow: hidden;
 }
 
 #focus-header {
@@ -20,6 +21,17 @@
 	align-items: center;
 	background: transparent;
 	z-index: 1;
+}
+
+#focus-map {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 0;
+	height: 650px;
+	width: 100%;
+	flex: 1;
+	border: 1px solid black;
 }
 
 #focus-header > * {
